refactor(项目结构): 修改项目结构